--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 
 # ===== 数据库 =====
 DATABASE_URL=postgresql://radar:radar@localhost:5432/radar
+DB_PASSWORD=your_db_password
 
 # ===== Redis =====
 REDIS_URL=redis://localhost:6379/0
