refactor: 推送逻辑重构 - 分析到有机会的立即推送
- slot.py: 将推送逻辑从循环后批量推送改为循环内立即推送
- analyzer.py: 新增 push_no_opportunity_today() 函数
- 更新文档 03-功能代码映射.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,8 @@ services:
   worker:
     build: .
     container_name: radar-worker
-    command: celery -A src.app.tasks.celery_app worker -l info
+    # -Q 参数指定监听的队列，必须包含 celery_app.py 中 task_routes 定义的所有队列
+    command: celery -A src.app.tasks.celery_app worker -l info -Q celery,slot,analysis
     environment:
       - DATABASE_URL=postgresql://radar:${DB_PASSWORD:-radar_secret}@postgres:5432/radar
       - REDIS_URL=redis://redis:6379/0
