fix: 修复 Celery Beat 检测 (挂载 docker.sock 到 web 容器)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       - RADAR_ADMIN_USERNAME=${RADAR_ADMIN_USERNAME:-admin}
       - RADAR_ADMIN_PASSWORD=${RADAR_ADMIN_PASSWORD}
       - TZ=Asia/Shanghai
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8000:8000"
     depends_on:
